update attribute